@@ -69,6 +69,9 @@ BUGFIXES:
   ZOOKEEPER-814. monitoring scripts are missing apache license headers
   (andrei savu via mahadev)
 
+  ZOOKEEPER-783. committedLog in ZKDatabase is not properly synchronized
+  (henry via mahadev) 
+
 IMPROVEMENTS:
   ZOOKEEPER-724. Improve junit test integration - log harness information 
   (phunt via mahadev)
